package vistas

import (
	"bufio"
	"context"
	"fmt"
	"io"
	"os"
	"strconv"
	"strings"
	"time"

	pbStream "servidor.local/grpc-servidor/serviciosStreaming"    //tengo error aqui
	pbSong "servidor.local/grpc-servidorCancion/serviciosCancion" //tengo error aqui

	util "cliente.local/grpc-cliente/utilidades"
)

var reader = bufio.NewReader(os.Stdin)

// / MostrarMenuPrincipal is the main entry point for the client's UI loop.
func MostrarMenuPrincipal(
	clienteCanciones pbSong.ServiciosCancionesClient,
	clienteStreaming pbStream.AudioServiceClient,
	ctx context.Context,
	nickname string,
	idUsuario int,
) {
	fmt.Printf("\nÂ¡Bienvenido, %s!\n", nickname)

	for {
		opcion := mostrarMenuPrincipalYObtenerOpcion()

		switch opcion {
		case 1:
			// Explore musical genres
			explorarGeneros(clienteCanciones, clienteStreaming, ctx)
		case 2:
			// View user preferences
			util.LlamarPreferencias(idUsuario)
		case 3:
			// Exit
			fmt.Println("\nðŸ‘‹ Â¡Gracias por usar Spotify Pirata!")
			return
		}
	}
}

// mostrarMenuPrincipalYObtenerOpcion shows the main menu and gets a valid choice.
func mostrarMenuPrincipalYObtenerOpcion() int {
	const minOpcion = 1
	const maxOpcion = 3 // CRITICAL FIX: Was '2', which made option 3 unreachable.

	for {
		fmt.Println("\n" + strings.Repeat("*", 50))
		fmt.Println("SPOTIFY PIRATA - MENÃš PRINCIPAL")
		fmt.Println(strings.Repeat("*", 50))
		fmt.Println("1. Escoge una canciÃ³n a reproducir")
		fmt.Println("2. Ver recomendaciones de preferencias")
		fmt.Println("3. Salir")
		fmt.Print("\nðŸ“ Seleccione una opciÃ³n (1-3): ")

		input, err := leerEntradaSinEspacios()
		if err != nil {
			fmt.Println("âŒ Error leyendo entrada. Intente nuevamente.")
			continue
		}

		opcion, err := strconv.Atoi(input)
		if err != nil {
			fmt.Println("âŒ Por favor, ingrese un nÃºmero vÃ¡lido.")
			continue
		}

		if opcion >= minOpcion && opcion <= maxOpcion {
			return opcion // Valid option (1, 2, or 3)
		}

		fmt.Printf("âŒ OpciÃ³n fuera de rango. Seleccione de %d a %d.\n", minOpcion, maxOpcion)
	}
}

// leerEntradaSinEspacios lee una lÃ­nea de entrada y la limpia de espacios y saltos de lÃ­nea.
func leerEntradaSinEspacios() (string, error) {
	input, err := reader.ReadString('\n')
	if err != nil {
		return "", err
	}
	return strings.TrimSpace(input), nil
}

// explorarGeneros maneja la exploraciÃ³n de gÃ©neros musicales.
func explorarGeneros(
	clienteCanciones pbSong.ServiciosCancionesClient,
	clienteStreaming pbStream.AudioServiceClient,
	ctx context.Context,
) {
	fmt.Println("\nðŸ“¡ Obteniendo lista de gÃ©neros disponibles...")

	// aÃ±ade timeout para la llamada gRPC
	ctxTimeout, cancel := context.WithTimeout(ctx, 5*time.Second)
	defer cancel()

	respuestaGeneros, err := clienteCanciones.ListarGeneros(ctxTimeout, &pbSong.Vacio{})
	if err != nil {
		fmt.Printf("âŒ Error obteniendo gÃ©neros: %v\n", err)
		presionarEnterParaContinuar()
		return
	}

	if len(respuestaGeneros.Generos) == 0 {
		fmt.Println("ðŸ˜” No hay gÃ©neros disponibles en este momento.")
		presionarEnterParaContinuar()
		return
	}

	// Loop para selecciÃ³n de gÃ©neros
	for {
		idGenero := mostrarGenerosYSeleccionar(respuestaGeneros.Generos)
		if idGenero == -1 {
			return
		}

		genero := buscarGeneroPorId(respuestaGeneros.Generos, idGenero)
		if genero == nil {
			fmt.Printf("âŒ GÃ©nero con ID %d no encontrado. Intente nuevamente.\n", idGenero)
			continue // Ask for genre ID again
		}

		// If a valid genre is found, enter the song exploration menu
		explorarCancionesPorGenero(clienteCanciones, clienteStreaming, ctx, genero)
	}
}

// mostrarGenerosYSeleccionar displays the list of genres and asks for a selection.
// Returns a valid genre ID or -1 to go back.
func mostrarGenerosYSeleccionar(generos []*pbSong.Genero) int32 {
	for {
		fmt.Println("\n" + strings.Repeat("*", 40))
		fmt.Println("GÃ‰NEROS MUSICALES DISPONIBLES")
		fmt.Println(strings.Repeat("*", 40))

		for _, g := range generos {
			fmt.Printf("ðŸŽµ %d. %s\n", g.Id, g.Nombre)
		}
		fmt.Printf("0. Volver al menÃº principal\n")
		fmt.Print("\nSeleccione un gÃ©nero (por ID): ")

		input, err := leerEntradaSinEspacios()
		if err != nil {
			fmt.Println("âŒ Error leyendo entrada. Intente nuevamente.")
			continue
		}

		if input == "0" {
			return -1
		}

		idGenero, err := strconv.Atoi(input)
		if err != nil {
			fmt.Println("âŒ Por favor, ingrese un nÃºmero vÃ¡lido.")
			continue
		}

		return int32(idGenero)
	}
}

// buscarGeneroPorId es una funciÃ³n auxiliar para encontrar un gÃ©nero por su ID.
func buscarGeneroPorId(generos []*pbSong.Genero, id int32) *pbSong.Genero {
	for _, g := range generos {
		if g.Id == id {
			return g
		}
	}
	return nil // Not found
}

func explorarCancionesPorGenero(
	clienteCanciones pbSong.ServiciosCancionesClient,
	clienteStreaming pbStream.AudioServiceClient,
	ctx context.Context,
	genero *pbSong.Genero,
) {
	fmt.Printf("\nBuscando canciones del gÃ©nero '%s'...\n", genero.Nombre)

	ctxTimeout, cancel := context.WithTimeout(ctx, 5*time.Second)
	defer cancel()

	respuestaCanciones, err := clienteCanciones.ListarCancionesPorGenero(ctxTimeout, &pbSong.IdGenero{Id: genero.Id})
	if err != nil {
		fmt.Printf("âŒ Error obteniendo canciones: %v\n", err)
		presionarEnterParaContinuar()
		return
	}

	if len(respuestaCanciones.Canciones) == 0 {
		fmt.Printf("No se encontraron canciones para el gÃ©nero '%s'.\n", genero.Nombre)
		presionarEnterParaContinuar()
		return
	}

	for {
		mostrarCancionesDelGenero(respuestaCanciones.Canciones, genero.Nombre)

		cancionSeleccionada := solicitarCancionPorTituloOID(respuestaCanciones.Canciones)
		if cancionSeleccionada == nil {
			return // User chose to go back
		}

		mostrarDetallesCancion(cancionSeleccionada)

		if confirmarReproduccion() {
			reproducirCancion(clienteStreaming, ctx, cancionSeleccionada)
		}
	}
}

func mostrarCancionesDelGenero(canciones []*pbSong.Cancion, nombreGenero string) {
	fmt.Println("\n" + strings.Repeat("*", 50))
	fmt.Printf("CANCIONES DEL GÃ‰NERO: %s\n", strings.ToUpper(nombreGenero))
	fmt.Println(strings.Repeat("*", 50))

	for i, c := range canciones {
		fmt.Printf("ðŸŽ¶ %d. %s - %s\n", i+1, c.Titulo, c.Artista)
	}
	fmt.Println("\nPara reproducir, escriba el nÃºmero (ej: '1') o el tÃ­tulo exacto.")
}

func solicitarCancionPorTituloOID(canciones []*pbSong.Cancion) *pbSong.Cancion {
	for {
		fmt.Print("\nðŸ“ Ingrese el nÃºmero o tÃ­tulo de la canciÃ³n (o 'volver' para regresar): ")

		input, err := leerEntradaSinEspacios()
		if err != nil {
			fmt.Println("âŒ Error leyendo entrada. Intente nuevamente.")
			continue
		}

		if strings.ToLower(input) == "volver" {
			return nil // Signal to go back
		}

		if num, err := strconv.Atoi(input); err == nil {
			if num >= 1 && num <= len(canciones) {
				return canciones[num-1] // Found by index
			}
			fmt.Println("âŒ NÃºmero fuera de rango. Intente nuevamente.")
			continue
		}

		// If not a number, try to match by title (case-insensitive)
		for _, c := range canciones {
			if strings.EqualFold(c.Titulo, input) {
				return c // Found by title
			}
		}

		fmt.Println("âŒ No se encontrÃ³ ninguna canciÃ³n con ese nÃºmero o tÃ­tulo. Intente nuevamente.")
	}
}

func mostrarDetallesCancion(cancion *pbSong.Cancion) {
	fmt.Println("\n" + strings.Repeat("=", 45))
	fmt.Println("ðŸŽµ DETALLES DE LA CANCIÃ“N")
	fmt.Println(strings.Repeat("=", 45))
	fmt.Printf("ðŸŽ¶ TÃ­tulo: %s\n", cancion.Titulo)
	fmt.Printf("ðŸŽ¤ Artista: %s\n", cancion.Artista)
	fmt.Printf("ðŸ“… AÃ±o: %d\n", cancion.AnioLanzamiento)
	fmt.Printf("â±ï¸  DuraciÃ³n: %s\n", cancion.Duracion)
	// Check if ObjGenero is nil to prevent panic
	if cancion.ObjGenero != nil {
		fmt.Printf("ðŸŽ¸ GÃ©nero: %s\n", cancion.ObjGenero.Nombre)
	}
	fmt.Printf("ðŸ—£ï¸  Idioma: %s\n", cancion.Idioma)
	fmt.Println(strings.Repeat("=", 45))
}

// confirmarReproduccion asks the user for a yes/no confirmation.
func confirmarReproduccion() bool {
	for {
		fmt.Print("\nÂ¿Desea reproducir esta canciÃ³n? (s/n): ")

		input, err := leerEntradaSinEspacios()
		if err != nil {
			fmt.Println("âŒ Error leyendo entrada. Intente nuevamente.")
			continue
		}

		input = strings.ToLower(input)

		switch input {
		case "s", "si", "sÃ­", "y", "yes":
			return true
		case "n", "no":
			return false
		default:
			fmt.Println("âŒ Por favor, responda 's' para sÃ­ o 'n' para no.")
		}
	}
}

// reproducirCancion handles the gRPC streaming and playback.
// It uses goroutines and channels to manage audio reception, playback, and user interruption.
func reproducirCancion(clienteStreaming pbStream.AudioServiceClient, ctx context.Context, cancion *pbSong.Cancion) {
	fmt.Printf("\nIniciando reproducciÃ³n de '%s'...\n", cancion.Titulo)

	// Create a cancellable context for this specific stream
	ctxCancel, cancel := context.WithCancel(ctx)
	defer cancel() // Ensures cancellation signal is sent when function exits

	stream, err := clienteStreaming.EnviarCancionMedianteStream(ctxCancel, &pbStream.PeticionDTO{
		Id:      cancion.Id,
		Formato: "mp3", // Assuming MP3 format
	})
	if err != nil {
		fmt.Printf("âŒ Error iniciando streaming: %v\n", err)
		presionarEnterParaContinuar()
		return
	}

	fmt.Println("Reproduciendo canciÃ³n en vivo...")
	fmt.Println("Escriba 1 para detener la reproducciÃ³n.")

	// Use io.Pipe to connect the gRPC receiver to the audio player
	audioReader, audioWriter := io.Pipe()

	// Channels for synchronization
	donePlaying := make(chan struct{}) // Signals when audio playback finishes
	interruption := make(chan bool, 1) // Signals when user presses '1'
	streamError := make(chan error, 1) // Signals if the stream fails

	// Goroutine 1: Play audio from the pipe
	// This goroutine will block until audioReader receives data or is closed
	go func() {
		util.ReproducirCancion(audioReader, donePlaying)
	}()

	// Goroutine 2: Listen for keyboard input to stop
	// This goroutine runs in a loop, using the GLOBAL reader
	go func() {
		for {
			// Read from the global reader, which is free because the main loop is blocked
			input, err := reader.ReadString('\n')
			if err != nil {
				// If the main context is cancelled, this might error.
				return
			}
			if strings.TrimSpace(input) == "1" {
				interruption <- true
				return // Stop this goroutine
			}
			// If input is not '1', the loop continues, ready to read again.
		}
	}()

	go func() {
		err := util.RecibirCancion(stream, audioWriter)
		if err != nil {
			streamError <- err // Report streaming error
		}
		// When streaming is done, close the writer to signal EOF to the player
		audioWriter.Close()
	}()

	select {
	case <-interruption:
		fmt.Println("\nReproducciÃ³n detenida por el usuario.")
		cancel()

	case <-donePlaying:
		fmt.Println("\nReproducciÃ³n finalizada.")

	case err := <-streamError:
		fmt.Printf("\nError durante el streaming: %v\n", err)
		cancel()
	}

	audioReader.Close()
	audioWriter.Close()

	presionarEnterParaContinuar()
}

// presionarEnterParaContinuar pausa la ejecuciÃ³n hasta que el usuario presione Enter.
func presionarEnterParaContinuar() {
	fmt.Print("\nPresione Enter para continuar...")
	reader.ReadString('\n')
}
